--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
 
     "builds": [
-       { "src": "app.js", "use": "@vercel/node" }
+       { "src": "./app.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "app.js" }
+       { "src": "/(.*)", "dest": "/" }
     ]
  }
